--- a/index.html
+++ b/index.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <style type = "text/css">
+       div{
+           width: 500px;
+           border: 1px solid purple;
+           margin: 0 auto;
+       }
+        
+    </style>
     <title>My First Page</title>
 </head>
 <body>
-    <h1>My First Page</h1>
+    <div>
+        <img src="https://source.unsplash.com/random/500x125" />
+        <hr />
+        <h1>Today's Code</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi aliquam amet quam atque repudiandae ad facilis adipisci voluptates labore veniam. Molestiae, laboriosam modi quia sunt earum non hic, officiis dignissimos fuga beatae explicabo. Perspiciatis, cum reprehenderit itaque sed soluta porro adipisci quibusdam dicta deserunt, quas perferendis voluptas! Voluptatem, error laudantium temporibus et, cupiditate assumenda dolores molestias iusto cum itaque ut quis asperiores, nostrum tempore esse <br> ipsam. Ad eos dolorum odit laborum accusantium. Iste cum corrupti reprehenderit, explicabo blanditiis culpa vero esse architecto quia dignissimos natus odit velit cumque eveniet maxime minus perferendis! Corrupti a, explicabo aliquam sint molestiae dicta officia illo debitis facere rem eum ratione accusamus libero aspernatur commodi facilis sequi provident quia? Minus assumenda dolor est sequi tempore corrupti illo facilis, laborum beatae velit placeat ducimus? Sit repudiandae quos voluptas illo earum, amet consectetur at architecto pariatur suscipit facere aspernatur id, fugit quas odio mollitia excepturi cum incidunt.
+        </p>
+        <a href="http://unsplash.com" target="_blank">Go to unsplash.com</a>
+
+    </div>
 </body>
 </html>
